[workspace]
members = [
  "./",
  "actix_redis",
  "actix_todo",
  "async_db",
  "async_ex1",
  "async_ex2",
  "basics",
  "cookie-auth",
  "cookie-session",
  "diesel",
  "error_handling",
  "form",
  "hello-world",
  "http-proxy",
  "json",
  "json_error",
  "jsonrpc",
  "juniper",
  "middleware",
  "multipart",
  "protobuf",
  "r2d2",
  "redis-session",
  "rustls",
  "server-sent-events",
  "simple-auth-server",
  "state",
  "static_index",
  "template_askama",
  "template_tera",
  "template_yarte",
  "template_handlebars",
  "tls",
  "udp-echo",
  "unix-socket",
  "web-cors/backend",
  "websocket",
  "websocket-chat",
  "websocket-chat-broker",
  "websocket-tcp-chat",
  "loger-demo",
  "syslog-demo",
  "loger-to-file",
  "loger-yaml",
  "result-option-demo",
  "map-err-demo",
  "future_ex1",
  "future_ex2",
  "future_ex3",
  "thread_local",
  "thread_local2",
  "thread_local3",
  "arc_mutex_across_threads",
  "arc_mutex_channel",
  "panic_demo",
  "lazy_static-demo",
  "fn-once-demo",
  "fnmut-demo",
  "rand-demo",
  "diverging-demo",
]
