[package]
name = "future_ex2"
version = "0.1.0"
authors = ["wenewzhang <wenewboy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
future-by-example = "0.1.0"

log = "0.4.8"
env_logger = "0.7.1"
